--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,9 +37,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EDD_U4_GRAFO
 endorsed.classpath=
 excludes=
+file.reference.swing-layout-1.0.2.jar=B:\\TEC\\SEMESTRE_5\\EDD\\U4\\jar_files\\swing-layout-1.0.2.jar
 includes=**
 jar.compress=true
-javac.classpath=
+javac.classpath=\
+    ${file.reference.swing-layout-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EDD_U4_GRAFO
-main.class=
+main.class=Programa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
